tests/paczka1/small_fuzzy/27530751.err
Error in line 4: Jhs S318 13,3
Error in line 6: S135 A336 0,9
